--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css?family=Roboto");
+
+:root {
+  --primary-color: #020202;
+  --secondary-color: #acacac;
+  --body-text-color: #596391;
+  --navbar-footer-color: #f9f9f9;
+}
+
+body {
+  font-family: "Roboto", arial, helvetica, sans-serif;
+  font-size: 12px;
+  color: var(--body-text-color);
+}
+
+.logo {
+  padding: 5px 20px;
+  border-radius: 8px;
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
+}
+
+.nav-link {
+  color: var(--primary-color);
+}
+
+.shadow-effect {
+  border: none;
+  box-shadow: 0 0 33px -10px rgba(75, 115, 255, 0.3);
+}
