Feature: Add components to display content with styling

--- a/src/app/subscription-form/subscription-form.component.html
+++ b/src/app/subscription-form/subscription-form.component.html
@@ -24,7 +24,9 @@
           />
         </div>
         <div class="col-md-2">
-          <button class="btn btn-info btn-block btn-sub">Subscribe</button>
+          <button class="btn btn-info btn-block btn-theme bg-theme">
+            Subscribe
+          </button>
         </div>
       </form>
     </div>
