--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,55 @@
-<p>home works!</p>
+<section class="feature-section bg-theme">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12 text-center mt-5">
+        <h2 class="text-white">Featured Posts</h2>
+        <p class="text-white">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse,
+          repudiandae?
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-3">
+        <app-post-card></app-post-card>
+      </div>
+      <div class="col-lg-3">
+        <app-post-card></app-post-card>
+      </div>
+      <div class="col-lg-3">
+        <app-post-card></app-post-card>
+      </div>
+      <div class="col-lg-3">
+        <app-post-card></app-post-card>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="container mt-5">
+  <div class="col-md-12 text-center">
+    <h2>Latest Pasts</h2>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat, sunt.
+    </p>
+  </div>
+  <div class="row">
+    <div class="col-md-4 mt-3">
+      <app-post-card></app-post-card>
+    </div>
+    <div class="col-md-4 mt-3">
+      <app-post-card></app-post-card>
+    </div>
+    <div class="col-md-4 mt-3">
+      <app-post-card></app-post-card>
+    </div>
+    <div class="col-md-4 mt-3">
+      <app-post-card></app-post-card>
+    </div>
+    <div class="col-md-4 mt-3">
+      <app-post-card></app-post-card>
+    </div>
+    <div class="col-md-4 mt-3">
+      <app-post-card></app-post-card>
+    </div>
+  </div>
+</section>
