--- a/src/app/subscription-form/subscription-form.component.css
+++ b/src/app/subscription-form/subscription-form.component.css
@@ -1,22 +1,13 @@
 .card {
   background-color: var(--secondary-color);
-}
-
-input[type="text"],
-input[type="email"] {
-  height: 60px;
-  padding-left: 20px;
-  font-size: 13px;
-  width: 100%;
-}
-
-.btn-sub {
-  height: 58px;
-  border: none;
-  font-size: 13px;
-  background-color: var(--primary-color);
+  width: 1200px;
 }
 
 .subs-text {
   width: 500px;
+}
+
+input[type="text"],
+input[type="email"] {
+  width: 100%;
 }
