Feature: Use firebase to load latest post

--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
-        <div class="logo">Share your doubts!</div>
+        <div class="logo">Your doubts!</div>
         <div>
           <ul class="nav justify-content-center">
             <li class="nav-item"><a href="#" class="nav-link"></a>Home</li>
