--- a/src/app/layouts/category-navbar/category-navbar.component.html
+++ b/src/app/layouts/category-navbar/category-navbar.component.html
@@ -1,11 +1,10 @@
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container">
     <div class="collapse navbar-collapse justify-content-center">
-      <ul class="navbar-nav">
-        <li class="nav-item ml-3"><a class="nav-link" href="#">Tech</a></li>
-        <li class="nav-item ml-3"><a class="nav-link" href="#">Design</a></li>
-        <li class="nav-item ml-3"><a class="nav-link" href="#">Business</a></li>
-        <li class="nav-item ml-3"><a class="nav-link" href="#">Logic</a></li>
+      <ul class="navbar-nav" *ngFor="let category of categories">
+        <li class="nav-item ml-3">
+          <a class="nav-link" href="#">{{ category.data.category }}</a>
+        </li>
       </ul>
     </div>
   </div>
