--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="navbar navbar-expand-lg fixed-top bg-white">
   <div class="container justify-content-center">
-    <a href="#" class="logo"> Share your doubts ! </a>
+    <a href="#" class="logo"> Your doubts ! </a>
   </div>
 </header>
