--- a/src/app/layouts/category-navbar/category-navbar.component.html
+++ b/src/app/layouts/category-navbar/category-navbar.component.html
@@ -3,7 +3,12 @@
     <div class="collapse navbar-collapse justify-content-center">
       <ul class="navbar-nav" *ngFor="let category of categories">
         <li class="nav-item ml-3">
-          <a class="nav-link" href="#">{{ category.data.category }}</a>
+          <a
+            class="nav-link"
+            [routerLink]="['/category', category.data.category, category.id]"
+          >
+            {{ category.data.category }}
+          </a>
         </li>
       </ul>
     </div>
