--- a/src/app/layouts/post-card/post-card.component.html
+++ b/src/app/layouts/post-card/post-card.component.html
@@ -1,13 +1,17 @@
-<div class="card shadow-effect">
-  <img [src]="postData.data.imageUrl" alt="post-image" class="card-img-top" />
+<div
+  *ngIf="postData"
+  [routerLink]="['/post', postData.id]"
+  class="card shadow-effect"
+>
+  <img [src]="postData.data.imageUrl" alt="post-image" class="card-img-top"/>
   <div class="card-body">
     <small class="bg-light text-danger text-center">
       {{ postData.data.category.category }}
     </small>
-    <small class="bg-light text-success text-center ml-3">Featured</small>
-    <small class="bg-light text-info text-center ml-3">{{
-      postData.data.views
-    }}</small>
+    <small *ngIf="postData.data.isFeatured" class="bg-light text-success text-center ml-3">Featured</small>
+    <small class="bg-light text-info text-center ml-3">
+      Views - {{ postData.data.views }}
+    </small>
     <h5 class="mt-1">{{ postData.data.title }}</h5>
     <p>
       {{ postData.data.details }}
