--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -18,29 +18,14 @@
 </section>
 <section class="container mt-5">
   <div class="col-md-12 text-center">
-    <h2>Latest Pasts</h2>
+    <h2>Latest Posts</h2>
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat, sunt.
     </p>
   </div>
   <div class="row">
-    <!-- <div class="col-md-4 mt-3">
-      <app-post-card></app-post-card>
+    <div class="col-md-4 mt-3" *ngFor="let post of latestPosts">
+      <app-post-card [postData]="post"></app-post-card>
     </div>
-    <div class="col-md-4 mt-3">
-      <app-post-card></app-post-card>
-    </div>
-    <div class="col-md-4 mt-3">
-      <app-post-card></app-post-card>
-    </div>
-    <div class="col-md-4 mt-3">
-      <app-post-card></app-post-card>
-    </div>
-    <div class="col-md-4 mt-3">
-      <app-post-card></app-post-card>
-    </div>
-    <div class="col-md-4 mt-3">
-      <app-post-card></app-post-card>
-    </div> -->
   </div>
 </section>
