--- a/src/app/pages/single-post/single-post.component.html
+++ b/src/app/pages/single-post/single-post.component.html
@@ -1,43 +1,37 @@
-<div class="container">
+<div *ngIf="post && post.data" class="container">
   <div class="row">
     <div class="col-md-9">
       <div class="card">
         <img
-          src="https://images.pexels.com/photos/9304449/pexels-photo-9304449.jpeg"
-          alt=""
+          [src]="post.data.imageUrl"
+          alt="post-image"
           class="card-img-top img-fluid"
         />
         <div class="card-body shadow-effect">
-          <small class="bg-light text-danger text-center">Design</small>
-          <small class="bg-light text-success text-center ml-2">Featured</small>
-          <small class="bg-light text-info text-center ml-2">Views</small>
-          <small class="bg-light text-warning text-center ml-2">
-            Last update
+          <small class="bg-light text-danger text-center">
+            {{ post.data.category.category }}
           </small>
-          <h1 class="mt-3 mb-3">How to start a carrier in 2024 in tech</h1>
+          <small *ngIf="post.data.isFeatured" class="bg-light text-success text-center ml-2">Featured</small>
+          <small class="bg-light text-info text-center ml-2">
+            Views - {{ post.data.views }}
+          </small>
+          <small class="bg-light text-warning text-center ml-2">
+            Last update -
+            {{ convertTimestampToDate(post.data.createdAt) | date }}
+          </small>
+          <h1 class="mt-3 mb-3">{{ post.data.title }}</h1>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore
-            dolorem molestias iste reiciendis neque. Maxime assumenda enim est,
-            dignissimos dolores sequi mollitia ipsam veniam dolore omnis eveniet
-            laboriosam excepturi obcaecati nostrum at unde iste voluptates?
-            Reprehenderit, minima quia explicabo vitae velit veritatis iste
-            laborum dolorum ipsa vero consectetur blanditiis aut aspernatur
-            doloribus soluta itaque ad sint assumenda quibusdam tempora repellat
-            asperiores corporis? Inventore cum repudiandae odit tempora enim
-            soluta officiis! Ipsam, id. Tempore debitis repellendus numquam
-            veniam animi minus et non. Nemo iusto nesciunt ab facere
-            repellendus! Quas mollitia debitis, eveniet blanditiis sunt
-            delectus, officiis ad totam ullam voluptatum quaerat!
+            {{ post.data.content }}
           </p>
         </div>
       </div>
       <app-comment-form></app-comment-form>
       <app-comment-list></app-comment-list>
     </div>
-    <div class="col-md-3">
-      <app-post-card></app-post-card>
-      <app-post-card></app-post-card>
-      <app-post-card></app-post-card>
+    <div *ngIf="similarPost.length" class="col-md-3">
+      <div *ngFor="let item of similarPost">
+        <app-post-card [postData]="item"></app-post-card>
+      </div>
     </div>
   </div>
 </div>
